--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -32,6 +32,12 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
+                    <li><a class="black-text" href="#">
+                        <div class="responsive-img">
+                          <!-- <img class="responsive-img" src=""> -->
+                          <b><%= user.nome %></b>
+                        </div>
+                      </a></li>
                     <li><a href="/home/alunos" class="black-text">Alunos</a></li>
                     <li><a href="/home" class="black-text">Crie</a></li>
                     <li><a href="/home/financas" class="orange-text">Finanças</a></li>
@@ -43,6 +49,12 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
+        <li><a class="black-text" href="#">
+            <div class="responsive-img">
+              <!-- <img class="responsive-img" src=""> -->
+              <b><%= user.nome %></b>
+            </div>
+          </a></li>
         <li><a href="/home/alunos" class="black-text">Alunos</a></li>
         <li><a href="/home" class="black-text">Crie</a></li>
         <li><a href="/home/financas" class="orange-text">Finanças</a></li>
