--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <header>
     <div class="center-align loader">
         <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
@@ -48,7 +49,7 @@
         <li><a href="#" class="orange-text">Entrar</a></li>
         <li><a href="/cadastro" class="black-text">Registrar</a></li>
     </ul>
-
+    </header>
     <div class="row">
 
         <div class="col s12 m11 l5" id="login">
@@ -61,7 +62,7 @@
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
                     <input id="email" type="email" name="email" class="validate" placeholder="Digite seu email">
-                    
+            
                 </div>
                 <div class="input-field">
                     <i class="material-icons prefix">lock_outline</i>
